FEATURE: App uses locationWhenInUse to get user current location to prepopulate when searching locations

--- a/LunchTime_iOS/Info.plist
+++ b/LunchTime_iOS/Info.plist
@@ -44,6 +44,8 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location used to locate restaurants and business in your area</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
