--- a/LunchTime_iOS/Info.plist
+++ b/LunchTime_iOS/Info.plist
@@ -28,7 +28,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.2</string>
 	<key>FacebookAppID</key>
 	<string>543396112669191</string>
 	<key>FacebookDisplayName</key>
@@ -42,7 +42,11 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location used to locate restaurants and business in your area</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location used to locate restaurants and business in your area</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Location used to locate restaurants and business in your area</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
